# emotion-mlops

./: .gitignore  pyproject.toml
src/data/: datamodule_fer2013.py
src/emotion_mlops/data/: datamodule_fer2013.py
src/emotion_mlops/models/: emotion_classifier.py
src/emotion_mlops/training/: train.py
src/emotion_mlops/utils/: __init__.py  paths.py  s3.py  splits.py
tests/: test_datamodule_fer2013.py
