[project]
name = "emotion-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.94",
    "lightning>=2.6.1",
    "mlflow>=3.11.1",
    "pytest>=9.0.3",
    "timm>=1.0.26",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
